#8UI | Edit icon changed, Nav set to theme, list alignment fixed | <Navaneeth>

--- a/lets-share/stylesheets/style.css
+++ b/lets-share/stylesheets/style.css
@@ -52,7 +52,7 @@ textarea.ui-input-text {height: 100px;}
 .letsshareLogo { width: 30%; float: left;}
 
 .ui-header {border-bottom: 5px solid #ccc;}
-.content-wrapper h1{font-size: 1.1em; margin: 0 0 10px 0; background: none repeat scroll 0 0 #CCCCCC; border-radius: 0 0 10px 10px; padding: 0 0 5px 10px;}
+.content-wrapper h1{font-size: 1.1em; margin: 0 0 10px 0; background: none repeat scroll 0 0 #CCCCCC; border-radius: 0 0 10px 10px; padding: 0 0 5px 10px; color:#666; text-shadow: 0 1px 0 #EEEEFF;}
 .userTitle {width: 68%; float: right; font-size: 14px; margin-top: 45px; text-align: right; padding-right: 1%; font-weight: normal;color: #FFFFFF;}
 div.ui-header.ui-bar-b a.userTitle {color: #fff; font-weight: normal; text-decoration: none; font-size:0.8em;}
 .userTitle img{ margin-left: 1%;}
@@ -116,7 +116,7 @@ input.ui-input-text, textarea.ui-input-text {background: #fcfcfc; border: 1px so
 .profileStatus, .ui-field-contain div.ui-slider{width: 38%; }
 .ui-checkbox {width: 65%; margin-left: 1%!important;}
 
-.navbar {margin-bottom: 10px; margin-left: 5px;}
+.navbar {margin-bottom: 10px;}
 .nav{border-radius: 10px; border-right: 1px solid #ccc!important;}
 .navbar .ui-focus, .navbar .ui-btn:focus {box-shadow: none!important;}
 .ui-block-a, .ui-block-b, .ui-block-c {width: 33.333%!important; margin-right: 0%!important;}
@@ -126,12 +126,19 @@ input.ui-input-text, textarea.ui-input-text {background: #fcfcfc; border: 1px so
 .ui-grid-solo .ui-block-a {width: 100%!important;}
 .ui-grid-solo .ui-block-a a{border-radius: 10px!important; border-right: 1px solid #ccc!important;}
 .ui-grid-a .ui-block-a, .ui-grid-a .ui-block-b{width: 49%!important;}
+.ui-grid-a .ui-block-b a{border-top-right-radius: 10px!important; border-bottom-right-radius: 10px!important;}
 .ui-btn-icon-top .ui-btn-inner {padding-top:25px;}
 .ui-btn-icon-top .ui-icon {top: 5px;}
 
 .ui-listview-filter-inset, .ui-listview-filter {margin: auto!important;}
 
-.ui-li-has-count .ui-li-count {margin-right: 10px;font-size: 1em; font-weight: normal; text-transform: capitalize;}
+span.time { background: url("../images/time.png") no-repeat 5% center; padding-left: 26px!important; padding-top: 5px!important;}
+.ui-li-has-count .ui-li-count {margin-right: 10px;font-size: 1em; font-weight: normal; text-transform: capitalize; border-radius: 10px;}
+.transportTitle, .transportVia, .accomTitle, .accomLocality, .n-cap {text-transform: capitalize;}
+.transportTitle, .accomTitle {margin-bottom: 15px;}
+.ui-li-desc {width: 50%; float: left; margin-bottom: 8px;}
+a.edit {background: url("../images/edit.png") no-repeat center center; margin-top:2px;}
+a.edit .ui-btn {display: none;}
 
 .ui-footer {margin-top: 10px;}
 .ui-footer center {font-size: 12px; padding: 10px 0 10px 0;}
